--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "license": "GPL-3.0",
     "dependencies": {
         "body-parser": "^1.18.3",
+        "ejs": "^2.6.1",
         "express": "^4.16.4"
     }
 }
