--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "license": "GPL-3.0",
     "dependencies": {
+        "bcrypt": "^3.0.2",
         "body-parser": "^1.18.3",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
