--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "ejs": "^2.6.1",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
-        "mongoose": "^5.4.0"
+        "mongoose": "^5.4.0",
+        "nodemailer": "^5.1.1"
     }
 }
